bug 489988 -  Java Applets reload when print is called, r+sr=roc