content/base/src/nsObjectLoadingContent.cpp
@@ -134,14 +134,14 @@ nsAsyncInstantiateEvent::Run()
   // Also make sure that we still refer to the same data.
   nsIObjectFrame* frame = mContent->
     GetExistingFrame(nsObjectLoadingContent::eFlushContent);
-#ifdef DEBUG
-  if (frame && mFrame.IsAlive()) {
-    nsIFrame* objectFrame = do_QueryFrame(frame);
-    NS_ASSERTION(objectFrame == mFrame.GetFrame(), "Wrong frame!");
+
+  nsIFrame* objectFrame = nsnull;
+  if (frame) {
+    objectFrame = do_QueryFrame(frame);
   }
-#endif
-  if (frame &&
-      mFrame.IsAlive() &&
+
+  if (objectFrame &&
+      mFrame.GetFrame() == objectFrame &&
       mContent->mURI == mURI &&
       mContent->mContentType.Equals(mContentType)) {
     if (LOG_ENABLED()) {
